Update new music

--- a/src/components/Preview.astro
+++ b/src/components/Preview.astro
@@ -10,6 +10,7 @@ const { type, title, url } = Astro.props;
 const typeEmoji =
     {
         "MIX & MASTERING": "🎚️",
+        "POSTPRODUCCIÓN DE AUDIO": "🎬",
     }[type] || "🎵";
 ---
 
