Update about resume alignment

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -38,7 +38,7 @@ import nlsImage from "../assets/nls.png";
                 }
             </ol>
         </div>
-        <div class="flex flex-col self-end w-full">
+        <div class="flex flex-col self-start w-full xl:pt-28">
             <p class="text-base xl:text-lg mb-3 text-primary">
                 En Nine Lives Studio llevamos el sonido a otro nivel. Mezclas con claridad, masters con carácter y diseño sonoro pensado al detalle. Ya sea música, cine o contenido digital, cada proyecto se trabaja con enfoque técnico y sensibilidad artística.
             </p>
