--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,7 +1,7 @@
 ---
 import Preview from "../components/Preview.astro";
 // import { urls } from "../config/urls";
-import { music } from "../data/music";
+import { portfolio } from "../data/portfolio";
 
 // const video = urls.cdn + "/portfolio-side.mp4";
 ---
@@ -18,7 +18,7 @@ import { music } from "../data/music";
   <div class="w-full flex flex-col md:flex-row items-start gap-8">
     <div class="w-full flex flex-col">
       <ul class="w-full divide-y border-y border-fill divide-fill">
-        {music.map((m) => <Preview {...m} />)}
+        {portfolio.map((m) => <Preview {...m} />)}
       </ul>
     </div>
     <!-- <div class="flex w-full md:w-1/3 items-start justify-center md:justify-end">
